--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -79,8 +79,7 @@
     <com.android.settings.custom.preference.SecureSettingSwitchPreference
         android:key="show_wifi_standard_icon"
         android:title="@string/show_wifi_standard_icon_title"
-        android:defaultValue="false"
-        android:icon="@drawable/ic_statusbar_wifi_standard" />
+        android:defaultValue="false" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:icon="@drawable/ic_statusbar_ethernet"
